--- a/tooplate_style.css
+++ b/tooplate_style.css
@@ -1,11 +1,11 @@
 body {
     margin: 0;
 	padding: 0;
-	color: #868684;
-	font-family: Tahoma, Geneva, sans-serif;
+	color: black;
+	font-family: Aleo, Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 14px;
 	line-height: 1.4em; 
-	background-color: #CCCCC4;
+	background-color: yellow;
 	background-image: url(images/tooplate_body_top.jpg);
 	background-repeat: repeat-x;
 	background-position: top
@@ -20,7 +20,7 @@ img { border: none; }
 h1, h2, h3, h4, h5, h6 { color: #555; font-weight: normal }
 h1 { font-size: 34px; margin: 0 0 35px 0; padding: 5px 0; }
 h2 { font-size: 30px; margin: 0 0 30px 0; padding: 0; }
-h3 { font-size: 24px; margin: 0 0 20px; padding: 0; }
+h3 { font-size: 24px; margin: 0 0 20px; padding: 0; color: white; }
 h4 { font-size: 18px; margin: 0 0 15px; padding: 0; }
 h5 { font-size: 16px; margin: 0 0 10px; padding: 0; }
 h6 { font-size: 14px; margin: 0 0 5px; padding: 0; }
@@ -33,7 +33,7 @@ h6 { font-size: 14px; margin: 0 0 5px; padding: 0; }
 .h50 { height: 50px }
 .h60 { height: 60px }
 
-a.more { color: #868684; background: url(images/tooplate_more.png) scroll 0 6px no-repeat; padding-left: 12px  }
+a.more { color: red; background: url(images/tooplate_more.png) scroll 0 6px no-repeat; padding-left: 12px  }
 a.more:hover { color: #000 }
 
 .float_l { float: left }
@@ -61,7 +61,7 @@ a.more:hover { color: #000 }
 
 blockquote { font-style: italic; margin-left: 10px}
 cite, cite a { font-weight: 700; color:#000 }
-cite span { color: #868684 }
+cite span { color: red }
 em { color: #000 }
 
 .tmo_list { margin: 0 0 0 15px; padding: 0 0 0 15px; list-style: disc }
@@ -72,7 +72,8 @@ em { color: #000 }
 #tooplate_body_wrapper {
 	width: 100%;
 	padding-bottom: 0px;
-    background: #CCCCC4;
+	background-image: linear-gradient(to right, rgb(2 6 23) , rgb(15 23 42));
+	background-image: linear-gradient(rgb(2 6 23), rgb(15 23 42));
 }
 
 #tooplate_wrapper { 
@@ -84,41 +85,20 @@ em { color: #000 }
 	padding: 10px;
 }
 
-/*
-#search_box { clear: both; float: right; margin: 0; }
-
-#search_box form { 
-	clear: both;
-	width: 220px; 
-	height: 40px;
-	padding: 7px 18px 10px 18px; 
-	background: url(images/tooplate_search_box.png) no-repeat
-} 
-
-#searchfield { 
-	width: 138px; 
-	padding: 0 5px 0 5px; 
-	margin: 0;
-	margin-right: 7px; font-size: 12px; color: #8b898a; line-height: 30px; background: none; border: none; } 
-
-#searchbutton { height: 25px; width: 60px; padding: 0; margin: 0; cursor: pointer; background: none; border: none; }
-*/
-
 #tooplate_header {
 	clear: both;
 	width: 960px;
 	height: 106px;
-	background: url(images/tooplate_header.png) no-repeat top
 }
+
 
 #tooplate_buffer {
     height: 15px;
-    background: #CCCCC4;
 }
 
 #site_title { float: left; margin: 2px 0 0 15px; }
-#site_title h1 { margin-left: 15; padding: 0; margin-top: 40 }
-#site_title h1 a { width: 342px; height: 49px; color: #FFF; font-family: "Brush Script MT"; font-size: 60 }
+#site_title h1 { margin-left: 15; padding: 0; margin-top: 40; font-family: "Aleo","Times New Roman"; font-weight: normal; color: white; font-size:55;}
+/* #site_title h1 a { width: 342px; height: 49px; color: #FFF; font-family: "Brush Script MT"; font-size: 60 } */
 
 #header_right {
 	float: right;
@@ -134,7 +114,7 @@ em { color: #000 }
 	clear: both;
 	float: right;
 	display: inline-block;
-    padding-top: 60
+    padding-top: 60;
 }
 
 #tooplate_menu ul {
@@ -155,7 +135,7 @@ em { color: #000 }
 	width: 102px;
 	height: 36px;
  	line-height: 36px;
-	margin-right: 1px;
+	margin-right: 10px;
 	font-size: 14px;
 	color: #7c7c7b;	
 	text-align: center;
@@ -167,25 +147,93 @@ em { color: #000 }
 
 #tooplate_menu ul li a:hover, #tooplate_menu ul .current {
 	color: #e0e0de;
-	background: url(images/tooplate_menu_hover.png) repeat-x top
+	background: url(images/tooplate_menu_hover.png);
 }
 
 /* end of menu */
 
-#tooplate_main_bottom { width: 960px; height: 10px; background: url(images/tooplate_main_bottom.png) no-repeat }
-
+#tooplate_main_bottom { width: 960px; height: 10px;}
+ 
 #tooplate_main {
 	clear: both;
 	width: 920px;
-/*    width: 90%;*/
 	padding: 30px 20px 0;
-	background: url(images/tooplate_main.jpg) repeat-y
 }
 
 .content_box {
 	margin-bottom: 8px;
 	padding-bottom: 0px;
 }
+
+.content_box_general {
+	margin-bottom: 8px;
+	padding-bottom: 0px;
+	background-color:grey;
+	border-radius: 25px;
+	padding: 20px;
+	color: white;
+	outline-style: solid;
+	outline-width: 2px;
+	font-size: 19;
+	font-style: normal;
+	font-family: "Aleo","Times New Roman"
+}
+
+.content_box_square{
+	margin-bottom: 8px;
+	background-color:grey;
+	border-radius: 25px;
+	padding: 20px;
+	color: white;
+	width: 50%;
+}
+
+.content_box_square_left{
+	float: left !important;
+	margin-bottom: 8px;
+	background-color:grey;
+	border-radius: 25px;
+	padding: 20px;
+	color: white;
+	width: 40%;
+}
+
+.content_box_square_right{
+	float: right !important;
+	margin-bottom: 8px;
+	background-color:grey;
+	border-radius: 25px;
+	padding: 20px;
+	color: white;
+	width: 40%;
+}
+.content_box_transparent {
+	margin-bottom: 8px;
+	padding-bottom: 0px;
+	border-radius: 25px;
+	padding: 20px;
+	color: white;
+}
+
+.content_box_transparent_side {
+	margin-bottom: 8px;
+	padding-bottom: 0px;
+	border-radius: 25px;
+	padding: 20px;
+	color: white;
+}
+
+.content_box_western {
+	/* width: 300x; */
+	margin-bottom: 8px;
+	padding-bottom: 0px;
+	background-color:#004B87;
+	border-radius: 25px;
+	padding: 20px;
+	color: white;
+}
+
+
 
 .lb { margin-bottom: 0 }
 
@@ -196,7 +244,7 @@ em { color: #000 }
 #tooplate_content {
 	float: left;
 	margin-left: 40px;
-	width: 360px;
+	width: 600px;
 }
 
 .tooplate_sidebar {
@@ -232,6 +280,15 @@ em { color: #000 }
 .box01 span.bottom { position: absolute; bottom: 0; left: 0; width: 240px; height: 14px; background: url(images/tooplate_box01_bottom.jpg) no-repeat center }
 
 .box01_content {
+	display: block;
+	margin-left: auto;
+  	margin-right: auto;
+}
+
+.box01_content_pad {
+	display: block;
+	margin-left: auto;
+  	margin-right: auto;
 	margin-bottom: 20px;
 }
 
@@ -322,6 +379,7 @@ a.follow_us { color: #30aede }
     height: 33px;
     width: 80px;
     font-size: 60px;
+	padding: 10px;
 }
 
 #med_emoji {
